<resources>
    <string name="hello">Hello TreeTracker!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="done">Done</string>
    <string name="notes">Notes</string>
    <string name="notes_double_colon">Notes:</string>
    <string name="album_name">TreeTracker</string>
    <string name="treetracker">TreeTracker</string>
    <string name="welcome">Welcome</string>
    <string name="tree_preview">Tree Preview</string>
    <string name="log_in_in_progress">Login in progress!</string>
    <string name="sign_up_in_progress">Sign up in progress!</string>
    <string name="downloading_your_trees">Downloading your trees!\nPlease wait.</string>
    <string name="no_image_preview_available">No image preview available</string>
    <string name="sending_password_reset_request">Sending password reset request.</string>
    <string name="reset_password_link_was_sent">Reset password link was sent to your e-mail.\nIf you do not see it, please check your junk mail.</string>
    <string name="email_was_not_found">E-mail address was not found.\nPlease enter correct e-mail address.</string>
    <string name="submit">Submit</string>
    <string name="password_reset">Password reset</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="manual">Manual</string>
    <string name="more">More</string>
    <string name="add_text_note_semicolon">Your note</string>
    <string name="add_text_note">Add text note</string>
    <string name="your_note">Your note</string>
    <string name="dbh">DBH (cm)</string>
    <string name="remove_photo">Remove photo</string>
    <string name="tree_missing">Tree Missing</string>
    <string name="touch_to_sync">Touch to snyc.</string>
    <string name="wifi_connected">Wifi connected.</string>
    <string name="tree_height_selection_error" translatable="false">Please select a tree height</string>
    <string name="tree_height_save_error" translatable="false">Please try again</string>
    <string name="tree_height_title">Select a tree height</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="reset_gps_location">Reset GPS location</string>
    <string name="save">Save</string>
    <string name="mark_gps">Mark GPS</string>
    <string name="update">Update</string>
    <string name="save_and_edit">Save and edit</string>
    <string name="do_you_want_to_sync_your_data_now">Do you want to sync your data now?</string>
    <string name="are_you_updating_this_tree">Are you updating this tree?</string>
    <string name="config_screen_login" translatable="false">Configuration Screen Login</string>
    <string name="outdated">Outdated</string>
    <string name="reset_password">Reset password</string>
    <string name="three_digit_number">Three digit number</string>
    <string name="distance_double_colon">Distance:</string>
    <string name="settings_saved">Settings saved</string>
    <string name="image_status_double_colon">Image Status:</string>
    <string name="last_update_double_colon">Last Update:</string>
    <string name="time_to_next_update_double_colon">Time to next update:</string>
    <string name="created_double_colon">Created:</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">E-mail address</string>
    <string name="email_address_or_phone_number">Phone number or email address</string>
    <string name="password">Password</string>
    <string name="organization">Organization</string>
    <string name="phone_number">Phone Number</string>
    <string name="privacy_policy">I have read, understand and agree to the terms of this <a href="https://www.greenstand.org/privacy-policy/">privacy policy</a> </string>
    <string name="sign_up">Sign Up</string>
    <string name="cause_of_death">Cause of death</string>
    <string name="you_are_about_to_mark_this_tree_as_missing">You are about to mark this tree as missing, would you like to proceed?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="do_not_have_account">Don\'t have an account?</string>
    <string name="meters">meters</string>
    <string name="days">days</string>
    <string name="day">day</string>
    <string name="create_user">Add User</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="new_tree">New Tree</string>
    <string name="update_tree">Update Tree</string>
    <string name="map">Map</string>
    <string name="data">Tree Data</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="exit">Exit</string>
    <string name="information">Information</string>
    <string name="forgot_password">Forgot password</string>
    <string name="forgot_password_resetting">Resetting forgotten password</string>
    <string name="sync">Sync</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="latitude_longitude">Latitude Longitude</string>
    <string name="gps_accuracy">GPS Accuracy</string>
    <string name="gps_accuracy_double_colon">GPS Accuracy: %d meters</string>
    <string name="gps_location_assessment">Assessing location</string>
    <string name="next_update_double_colon">Next update:</string>
    <string name="days_to_next_update_double_colon">Days to next update:</string>
    <string name="enable_location_access">Enable location access</string>
    <string name="you_must_enable_location_access_in_your_settings_in_order_to_continue">You must enable location access setting in order to continue!</string>
    <string name="user_already_exists">User already exists</string>
    <string name="user_with_that_email">User with that e-mail address already exists.\nPlease choose action below or press back to try with another e-mail address.</string>
    <string name="total_trees">Total Trees</string>
    <string name="located">Located</string>
    <string name="to_sync">To Sync</string>
    <string name="uploaded">Uploaded</string>
    <string name="location_permission_alert_title">Allow TreeTracker to access location?</string>
    <string name="location_permission_alert_message">Please open Settings and turn on location permission for TreeTracker</string>
    <string name="information_text">
        •	This tree tracking planter app is made to track planted trees while supporting people and organizations that plant, monitor and protect trees.
        
        •	Your app requires 10 meters of accuracy to take a photo.
        
        •	Take a picture of your trees and then press sync and your tree data will be uploaded to a map at www.treetracker.org.
        
        •	Email: info@greenstand.com for more access to your data, or a web link with your specific trees.
        
        •	Visit www.GreenStand.org for more details on how this system works.
        
        •	Developers can find the open source project code at www.github.com/greenstand"
    </string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_not_identified">User Not Identified</string>
    <string name="change_user">Change User</string>
    <string name="change_language">Change Language</string>
    <string name="language">Language</string>
    <string name="add_tree">ADD TREE</string>
    <string name="gps_accuracy_length">10 meters</string>
    <string name="tree">tree</string>
    <string name="five_text_view">5</string>
    <string name="ten">10</string>
    <string name="fifty">50</string>
    <string name="two_hundred">200</string>
    <string name="thousand">1000</string>
    <string name="user_details_text">Provide your details to continue</string>
    <string name="all_set">All set!</string>
    <string name="identification_text">Show us who you are\.\.\.</string>
    <string name="start_planting">Start Planting</string>
    <string name="build_version_title" translatable="false">Build version  </string>
    <string name="tree_tracker_title" translatable="false">Tree Tracker(debug) </string>
    <string name="sync_blocked" translatable="false">Sync Blocked</string>
    <string name="sync_started">Sync Started</string>
    <string name="sync_stopped">Sync Stopped</string>
    <string name="nothing_to_sync">Nothing to Sync</string>
    <string name="sync_failed">Start Sync Failed, Please try again</string>
    <string name="sync_successful">Sync Successful</string>
    <string name="tree_saved" translatable="false">Tree saved</string>
    <string name="next" translatable="false">Next</string>
    <string name="back" translatable="false">Back</string>
    <string name="greenstand_welcome_text" translatable="false"><b>Greenstand TreeTracker</b></string>
    <string name="phone_text_hint" translatable="false">Phone Number</string>
    <string name="email_text_hint" translatable="false">Or Email Address</string>
    <string name="login_button_title" translatable="false">LOGIN</string>
    <string name="signup_button_titile" translatable="false">SIGN UP</string>
    <string name="first_name_hint" translatable="false">First Name</string>
    <string name="last_name_hint" translatable="false">Last Name</string>
    <string name="organization_text_hint" translatable="false">Organization (optional)</string>
    <string name="email_placeholder">Email</string>
    <string name="phone_placeholder">Phone</string>
    <string name="name_placeholder">Name</string>
    <string name="terms_text_test" translatable="false">Lorem ipsum dolor sit amet Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Senectus et netus et malesuada. Non enim praesent elementum facilisis leo. Sollicitudin ac orci phasellus egestas. Blandit volutpat maecenas volutpat blandit. Proin libero nunc consequat interdum varius sit amet mattis. Quis risus sed vulputate odio ut enim blandit volutpat maecenas. Augue interdum velit euismod in pellentesque. Sollicitudin nibh sit amet commodo nulla facilisi. Purus ut faucibus pulvinar elementum integer.
    </string>
    <string name="agreement_text_test" translatable="false">By signing up, you agree to the Terms of Service and Privacy Policy, including Cookies Use. </string>
    <string name="terms_title_string" translatable="false">I. Terms of Service</string>
    <string name="policy_title_string" translatable="false">II. Privacy Policy</string>
    <string name="cookies_title_string" translatable="false">III. Cookies Use</string>
    <string name="show_details_string" translatable="false">Show details</string>
    <string name="accept_button_title" translatable="false">ACCEPT</string>
    <string name="sign_up_title" translatable="false"><b>Sign Up</b></string>
    <string name="terms_text" translatable="false">Terms of Service text.....bla..bla</string>
    <string name="cookies_text" translatable="false">Cookies goes here...bla...bla...</string>
    <string name="storagePermissQuestion" translatable="false">Allow <b>Tree Tracker</b> to access your storage?</string>
    <string name="locationPermissionQuestion" translatable="false">Allow <b>Tree Tracker</b> to access your location?</string>
    <string name="cameraPermissionQuestion" translatable="false">Allow <b>Tree Tracker</b> to access your camera?</string>
    <string name="storage_permission_title" translatable="false"><b>Storage Permission</b></string>
    <string name="location_permission_title" translatable="false"><b>Location Permission</b></string>
    <string name="camera_permission_title" translatable="false"><b>Camera Permission</b></string>
</resources>