<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/fragment_settings_which_settings_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/fragmentSettingsWhichSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/six_dp">

            <RadioButton
                android:id="@+id/fragment_settings_treetracker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_twenty_four"
                android:text="@string/treetracker" />

            <RadioButton
                android:id="@+id/fragment_settings_manual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_twenty_four"
                android:text="@string/manual" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_settings_gps_accuracy_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_settings_which_settings_layout"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_forty_eight"
        android:paddingTop="@dimen/two_dp"
        android:paddingRight="@dimen/padding_thirty_two"
        android:paddingBottom="@dimen/two_dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/height_forty"
            android:layout_marginTop="@dimen/margin_twelve"
            android:layout_weight="1"
            android:text="@string/gps_accuracy_double_colon"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_seventeen" />

        <TextView
            android:id="@+id/fragmentSettingsGpsAccuracy"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_forty"
            android:layout_marginTop="@dimen/margin_twelve"
            android:layout_weight="1"
            android:gravity="end"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_seventeen" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragmentSettingsManualSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_settings_gps_accuracy_layout"
        android:orientation="vertical"
        android:visibility="gone">

        <RadioGroup
            android:id="@+id/fragmentSettingsManualSettingsRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_forty_eight">

            <RadioButton
                android:id="@+id/fragment_settings_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ten" />

            <RadioButton
                android:id="@+id/fragment_settings_50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifty" />

            <RadioButton
                android:id="@+id/fragment_settings_200"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_hundred" />

            <RadioButton
                android:id="@+id/fragment_settings_1000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thousand" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_settings_next_update_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragmentSettingsManualSettings"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_forty_eight"
        android:paddingRight="@dimen/padding_thirty_two"
        android:paddingBottom="@dimen/padding_five">

        <TextView
            android:id="@+id/fragment_settings_next_update_text"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_forty"
            android:layout_marginTop="@dimen/padding_five"
            android:layout_weight="3"
            android:text="@string/days_to_next_update_double_colon"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_seventeen" />

        <EditText
            android:id="@+id/fragmentSettingsNextUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:maxLength="3"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_seventeen" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/fragmentSettingsSaveAndEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_settings_next_update_layout"
        android:layout_marginLeft="@dimen/margin_twenty_four"
        android:layout_marginRight="@dimen/margin_twenty_four"
        android:text="@string/save_and_edit"
        android:textSize="@dimen/text_size_seventeen"
        android:visibility="gone" />

    <Button
        android:id="@+id/fragmentSettingsSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/padding_five"
        android:background="@drawable/white_gray_gradient"
        android:padding="@dimen/padding_five"
        android:text="@string/submit"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_seventeen"
        android:textStyle="normal" />

</RelativeLayout>

