<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/pwdError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textColor="@color/red"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/adminPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/pwdError" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPositive"
        style="@style/Theme.AppCompat.Dialog.Alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/ok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adminPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNegative"
        style="@style/Theme.AppCompat.Dialog.Alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="6dp"
        android:text="@string/cancel"
        app:layout_constraintStart_toEndOf="@id/btnPositive"
        app:layout_constraintTop_toBottomOf="@+id/adminPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>