<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/fragment_new_tree"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background"
                android:orientation="vertical">

    <ImageView
        android:id="@+id/fragmentNewTreeImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_new_tree_image"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_margin="24dp"
        android:contentDescription="@string/tree"
        />

    <LinearLayout
        android:id="@+id/fragment_new_tree_focus_warning_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragmentNewTreeImage"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/margin_twenty_four"
        android:paddingRight="@dimen/margin_twenty_four"
        android:paddingTop="@dimen/one_dp">

        <TextView
            android:id="@+id/fragment_new_tree_focus_warning_text"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@drawable/caution_text_border"
            android:gravity="center"
            android:text=""
            android:textColor="@color/cautionOrange"
            android:textSize="@dimen/text_size_seventeen"
            android:visibility="gone"/>

    </LinearLayout>

    <TextView
        android:id="@+id/fragmentNewTreeGpsAccuracy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_new_tree_focus_warning_layout"
        android:paddingLeft="@dimen/margin_twenty_four"
        android:paddingRight="@dimen/margin_twenty_four"
        android:paddingTop="@dimen/one_dp"
        android:gravity="center"
        android:text="@string/gps_accuracy_double_colon"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_seventeen"/>

    <EditText
        android:id="@+id/fragmentNewTreeNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragmentNewTreeGpsAccuracy"
        android:layout_marginLeft="@dimen/margin_twenty_four"
        android:layout_marginRight="@dimen/margin_twenty_four"
        android:layout_marginTop="16dp"
        android:hint="@string/your_note"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:lines="2"
        android:maxLength="50"
        android:maxLines="2"
        android:minLines="2"
        android:textSize="@dimen/text_size_sixty"/>

    <EditText
        android:id="@+id/fragmentNewTreeDBH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragmentNewTreeNote"
        android:layout_marginLeft="@dimen/margin_twenty_four"
        android:layout_marginRight="@dimen/margin_twenty_four"
        android:layout_marginTop="16dp"
        android:hint="@string/dbh"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:visibility="gone"
        android:lines="2"
        android:maxLength="50"
        android:maxLines="2"
        android:minLines="2"
        android:textSize="@dimen/text_size_sixty"/>

    <LinearLayout
        android:id="@+id/fragment_new_tree_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="@dimen/padding_five">

        <Button
            android:id="@+id/fragmentNewTreeSave"
            style="@style/NewButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="@dimen/margin_eight"
            android:paddingTop="@dimen/margin_eight"
            android:text="@string/save"/>

    </LinearLayout>

</RelativeLayout>

